--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,6 @@ requests==2.18.4
 requests-oauthlib==1.3.0
 requests-unixsocket==0.1.5
 flask-bootstrap==3.3.7.1
+scikit-learn==0.22.2.post1
+rainflow==2.2.0
+numpy==1.16.6
